fix scrollbar

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -917,7 +917,7 @@ html {
 }
 
 body {
-  height: max-content;
+  height: 100%;
   overflow-y: auto;
   background: unset !important;
 }
